Add fixes to application logic
