# swagger_server/swagger/swagger.yaml
@@ -44,7 +44,13 @@ paths:
       produces:
       - "application/xml"
       - "application/json"
-      parameters: []
+      parameters:
+      - name: "student_id"
+        in: "path"
+        description: "ID of student to return"
+        required: true
+        type: "integer"
+        format: "int64"
       responses:
         "200":
           description: "successful operation"
